# RanokCore

./: .gitignore  CMakeLists.txt
App/: CMakeLists.txt  main.cpp
Examples/NewFuncs/: sphere.txt  test.txt
RanokCoreLib/: CMakeLists.txt
RanokCoreLib/src/: Color.h  SpaceCalculators.h  Vectors.h
RanokCoreLib/src/Language/: GeneratedFunctions.cpp  GeneratedFunctions.h  LangFunctions.cpp  LangFunctions.h  Lexer.cpp  Lexer.h  Node.h  NodeCreator.h  Parser.cpp  Parser.h  Program.cpp  Program.h  SymbolTable.cpp  SymbolTable.h
RanokCoreLib/src/Space/: ModelMetadata.cpp  ModelMetadata.h  SpaceBuilder.cpp  SpaceBuilder.h  SpaceManager.cpp  SpaceManager.h
RanokCoreLib/src/Space/Calculators/: CommonCalculator.cpp  CommonCalculator.h  ISpaceCalculator.cpp  ISpaceCalculator.h  LinearGradientModel.cpp  LinearGradientModel.h  OpenclCalculator.cpp  OpenclCalculator.h
test/: test.sh
